<resources>
    <string name="app_name">SkutApplication</string>
    <string name="my_formatted_text">
    <font color="@color/black">Your</font>
    <font color="#6ED2F0">Sk<font color="@color/black">in</font></font>
    <font color="@color/black">Sol<font color="#6ED2F0">ut</font>ion</font>


    </string>
    <string name="app_title">SKUT</string>
    <string name="splash_content_description">splash_image</string>
    <string-array name="data_question">
        <item>Acne</item>
        <item>Cancer</item>
        <item>Millia</item>
        <item>Rosacea</item>
        <item>Eksim</item>
    </string-array>
    <string-array name="data_answer">
        <item>Vaksin booster diberikan untuk masyarakat umum mulai 12 Januari 2022.</item>
        <item>Vaksin booster gratis untuk semua masyarakat.</item>
        <item>Anda bisa mendapatkan vaksin booster setelah 6 bulan mendapatkan vaksin dosis kedua. Jadwal dan tiket vaksinasi akan muncul di aplikasi PeduliLindungi pada menu “Status Vaksinasi &amp; Hasil Tes Covid-19”.</item>
        <item>Masyarakat yang termasuk dalam kelompok prioritas penerima vaksin booster dapat mengecek tiket dan jadwal vaksinasi di website dan aplikasi PeduliLindungi. Tiket tersebut dapat digunakan di fasilitas kesehatan atau tempat vaksinasi terdekat pada waktu yang sudah ditentukan.Melalui website, masyarakat bisa mengunjungi pedulilindungi.id dan mengecek status dan tiket vaksinasi dengan memasukkan “Nama Lengkap” dan “NIK”, lalu klik periksa. Jika melalui aplikasi PeduliLindungi, masyarakat bisa mengikuti langkah-langkah berikut:Buka aplikasi PeduliLindungiMasuk dengan akun yang terdaftar Klik menu “Profil” dan pilih “Status Vaksinasi &amp; Hasil Tes Covid-19” Status dan jadwal vaksinasi booster akan muncul di akun. Untuk cek tiket, masuk ke menu “Riwayat dan Tiket Vaksin".</item>
        <item>Masyarakat tidak dapat memilih jenis vaksinasi booster. Jenis vaksin akan ditentukan oleh petugas kesehatan berdasarkan riwayat vaksin dosis 1 dan 2 serta ketersediaan vaksin di tempat layanan.</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome">Welcome</string>
    <string name="password_error">Password minimum 6 characters</string>
    <string name="login">Login</string>
    <string name="does_not_have_an_account">Doesn\'t have an account?</string>
    <string name="register">Register</string>

    <string name="please_login_first">Please <font color="#A155B9">login</font> first</string>
    <string name="fill_your_data_correctly">Fill your <font color="#A155B9">data</font> correctly</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    
    <string name="account_created">Account Successfully Created</string>
    <string name="logout">Logout</string>
</resources>